# u8ility

./: CMakeLists.txt  LICENSE  README.md  main.cpp
aux/: CMakeLists.txt  utils.cpp  utils.hpp
u8/: CMakeLists.txt
u8/core_char/: CMakeLists.txt  mchar.cpp  mchar.hpp
u8/core_string/: CMakeLists.txt  mstr.cpp  mstr.hpp
